tests/dockerfile/graph_builder/checks/resources/RunUnsafeCurl/fail/Dockerfile.short
FROM alpine:3.5
RUN curl -k https://example.com
